--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   /* глобальные переменные */
   --bg-layout-color: #161513;
   --bg-container-color: #222222;
+  --bg-block-color: #2b2b2b;
   --text-primary-color: white;
   --text-secondary-color: #8491A0;
   --text-highlighted-color: #F77A53;
@@ -95,12 +96,16 @@ h3 {
 
 .main-cont-2 {
   height: 301px;
-  background-image: url(../images/block.svg);
+  background-color: var(--bg-block-color);
+  border-radius: 5%;
+  text-align: center;
 }
 
 .main-cont-3 {
   height: 301px;
-  background-image: url(../images/block.svg);
+  background-color: var(--bg-block-color);
+  border-radius: 5%;
+  text-align: center;
 }
 
 /*     Cv      */
@@ -114,8 +119,9 @@ h3 {
 
 .block-1 {
   grid-row: span 2;
-  height: 646px;
-  background-image: url(../images/block-tall.svg);
+  height: 446px;
+  background-color: var(--bg-block-color);
+  border-radius: 5%;
   align-items: center;
   justify-content: center;
   display: flex;
@@ -127,88 +133,160 @@ h3 {
 }
 
 .block-2 {
-  height: 301px;
-  background-image: url(../images/block.svg);
+  height: 241px;
+  background-color: var(--bg-block-color);
+  border-radius: 5%;
   text-align: center;
 }
 
 .block-3 {
-  height: 301px;
-  background-image: url(../images/block.svg);
+  height: 165px;
+  background-color: var(--bg-block-color);
+  border-radius: 5%;
   text-align: center;
 }
 
 .block-4 {
   grid-row: span 2;
-  height: 646px;
-  background-image: url(../images/block-tall.svg);
+  height: 345px;
+  background-color: var(--bg-block-color);
+  border-radius: 5%;
   text-align: center;
 }
 
 .block-5 {
-  height: 301px;
-  background-image: url(../images/block.svg);
+  height: 121px;
+  background-color: var(--bg-block-color);
+  border-radius: 5%;
   text-align: center;
 }
 
 .block-6 {
-  height: 301px;
-  background-image: url(../images/block.svg);
+  height: 180px;
+  background-color: var(--bg-block-color);
+  border-radius: 5%;
   text-align: center;
 }
 
 .block-7 {
-  height: 301px;
-  background-image: url(../images/block.svg);
+  height: 161px;
+  background-color: var(--bg-block-color);
+  border-radius: 5%;
   text-align: center;
 }
 
 .block-8 {
-  height: 301px;
-  background-image: url(../images/block.svg);
+  height: 161px;
+  background-color: var(--bg-block-color);
+  border-radius: 5%;
   text-align: center;
+}
+
+/*    About    */
+
+.main-about {
+  display: grid;
+  grid-template-columns: repeat(1, 780px);
+  gap: 44px;
+  justify-content: center;
+
+}
+
+.about-container {
+  height: 322px;
+  background-color: var(--bg-block-color);
+  border-radius: 3%;
+  position: relative;
+}
+
+.about-text {
+  height: 302px;
+  width: 680px;
+  text-align: center;
+  position: absolute;
+  top: 50px;
+  left: 50px;
 }
 
 /*    Portfolio    */
 
 .portfolio-container {
-
+  display: grid;
+  grid-template-columns: repeat(1, 780px);
+  gap: 44px;
+  justify-content: center;
 }
 
 .container1 {
-
+  height: 280px;
+  background-color: var(--bg-block-color);
+  border-radius: 2%;
+  position: relative;
 }
 
 .container1-photo {
-
+  width: 225px;
+  height: 225px;
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  border: 3px solid var(--text-secondary-color);
 }
 
 .container1-text {
-
+  width: 325px;
+  height: 225px;
+  position: absolute;
+  top: 75px;
+  left: 375px;
 }
 
 .container2 {
-
+  height: 280px;
+  background-color: var(--bg-block-color);
+  border-radius: 2%;
+  position: relative;
 }
 
 .container2-text {
-
+  width: 325px;
+  height: 225px;
+  position: absolute;
+  top: 75px;
+  left: 100px;
 }
 
 .container2-photo {
-
+  width: 225px;
+  height: 225px;
+  position: absolute;
+  top: 25px;
+  left: 535px;
+  border: 3px solid var(--text-secondary-color);
 }
 
 .container3 {
-
+  height: 280px;
+  background-color: var(--bg-block-color);
+  border-radius: 2%;
+  position: relative;
 }
 
 .container3-photo {
-
+  width: 225px;
+  height: 225px;
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  border: 3px solid var(--text-secondary-color);
 }
 
 .container3-text {
-  
+  width: 325px;
+  height: 225px;
+  position: absolute;
+  top: 85px;
+  left: 375px;
 }
 
 /*    braek points    */
