--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ h3 {
   .main-about {
     display: grid;
     grid-template-columns: repeat(1, 300px);
-    gap: 16;
+    gap: 16px;
   }
 
   .about-container {
