--- a/css/style.css
+++ b/css/style.css
@@ -156,19 +156,16 @@ h3 {
 }
 
 .about-container {
-  height: 322px;
   background-color: var(--bg-block-color);
   border-radius: 3%;
   position: relative;
 }
 
 .about-text {
-  height: 302px;
   width: 680px;
-  text-align: center;
-  position: absolute;
-  top: 50px;
-  left: 50px;
+  margin: 20px auto; 
+  text-align: left;
+  line-height: 1.6; 
 }
 
 /*    Portfolio    */
@@ -297,15 +294,11 @@ h3 {
   }
 
   .about-container {
-    height: 420px;
     border-radius: 3%;
   }
 
   .about-text {
-    height: 402px;
     width: 350px;
-    top: 10px;
-    left: 10px;
   }
 
   .portfolio-container {
@@ -393,15 +386,11 @@ h3 {
   }
 
   .about-container {
-    height: 520px;
     border-radius: 3%;
   }
 
   .about-text {
-    height: 302px;
     width: 280px;
-    top: 10px;
-    left: 10px;
   }
 
   .portfolio-container {
